Updated code of user management add new controllers, routes

--- a/public/test.html
+++ b/public/test.html
@@ -89,29 +89,29 @@
     <form id="uploadForm" action="/api/education" method="post" enctype="multipart/form-data">
         <div class="form-group">
             <label for="userId">User ID:</label>
-            <input type="text" id="userId" name="userId" value="674803e8b330c3ef6486507c" readonly>
+            <input type="text" id="userId" name="userId" value="674ab24d4c3572f504418c76" readonly>
         </div>
         <div class="form-group">
             <label for="educationData">Education Data:</label>
             <textarea id="educationData" name="educationData" class="education-data" readonly>[
   {
     "level": "SSC",
-    "schoolName": "SSC School",
+    "schoolName": "Rabari colony School",
     "passingYear": 2015,
     "percentage": 85.5,
     "location": "Mumbai"
   },
   {
     "level": "HSC",
-    "schoolName": "HSC College",
-    "fieldOfStudy": "Science",
+    "schoolName": "Rajkot higher secondary College from Rabari",
+    "fieldOfStudy": "Commerce",
     "passingYear": 2017,
     "percentage": 82.3,
     "location": "Mumbai"
   },
   {
     "level": "DIPLOMA",
-    "collegeName": "Technical Institute",
+    "collegeName": "Technical Institute of Banglore",
     "degreeName": "Diploma in Computer Engineering",
     "passingYear": 2019,
     "percentage": 78.9,
@@ -119,7 +119,7 @@
   },
   {
     "level": "DEGREE",
-    "collegeName": "Engineering College",
+    "collegeName": "Engineering College of Banglore",
     "degreeName": "Bachelor of Technology",
     "passingYear": 2022,
     "cgpa": 8.5,
@@ -127,7 +127,7 @@
   },
   {
     "level": "MASTER",
-    "collegeName": "Tech University",
+    "collegeName": "Tech University of Banglore",
     "degreeName": "Master of Technology",
     "passingYear": 2024,
     "cgpa": 9.2,
