--- a/public/test-work.html
+++ b/public/test-work.html
@@ -89,18 +89,18 @@
     <form id="uploadForm" action="/api/work" method="post" enctype="multipart/form-data">
         <div class="form-group">
             <label for="userId">User ID:</label>
-            <input type="text" id="userId" name="userId" value="674803e8b330c3ef6486507c" readonly>
+            <input type="text" id="userId" name="userId" value="674ab24d4c3572f504418c76" readonly>
         </div>
         <div class="form-group">
             <label for="workData">Work Experience Data:</label>
             <textarea id="workData" name="workData" class="work-data" readonly>{
-  "companyName": "Tech Corp",
-  "location": "Mumbai",
+  "companyName": "Uminber Group",
+  "location": "Ahmedabad",
   "department": "Engineering",
   "designation": "Software Engineer",
   "managerName": "John Doe",
-  "salary": 50000,
-  "workExperience": 2,
+  "salary": 80000,
+  "workExperience": 1,
   "startDate": "2020-01-01",
   "endDate": "2022-12-31"
 }</textarea>
