Add some html file to test image data also add some form updation apis

--- a/public/test-current-work.html
+++ b/public/test-current-work.html
@@ -87,15 +87,15 @@
         <h3>Add Current Work Info</h3>
         <div class="form-group">
             <label for="userId">User ID:</label>
-            <input type="text" id="userId" name="userId" value="674803e8b330c3ef6486507c" readonly>
+            <input type="text" id="userId" name="userId" value="6752cc45cc4a8e3c3da46c7e" readonly>
         </div>
         <div class="form-group">
             <label for="employeeId">Employee ID:</label>
-            <input type="text" id="employeeId" name="employeeId" value="EMP001" required>
+            <input type="text" id="employeeId" name="employeeId" value="EMP004" required>
         </div>
         <div class="form-group">
             <label for="workMailId">Work Email:</label>
-            <input type="email" id="workMailId" name="workMailId" value="john.doe@company.com" required>
+            <input type="email" id="workMailId" name="workMailId" value="kar@company.com" required>
         </div>
         <div class="form-group">
             <label for="department">Department:</label>
